# cumplo-touchbar-notification

./: .applescript  .applescript.fillme  .env.fillme  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  run.sh  workspace.code-workspace
libs/: cumplo.py  params.py  scraper.py  utils.py  webdriver.py
