[tool.poetry]
name = "cumplo-investment-oportunities"
version = "0.1.0"
description = "Cumplo touch-bar notification"
authors = ["cnsfeir <cnsfeir@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.20.0"
selenium = "^4.2.0"
webdriver-manager = "^3.7.1"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pylint = "^2.2.3"
flake8 = "^6.0.0"
black = "^23.1.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"